--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yeogurt-test",
   "version": "0.0.1",
   "dependencies": {
+    "bemto.jade": "git+https://github.com/kizu/bemto.git",
     "jquery": "~2.2.0",
     "normalize.css": "~3.0.3"
   },
@@ -41,7 +42,7 @@
     "gulp-newer": "~1.1.0",
     "js-yaml": "~3.5.2",
     "watchify": "~3.7.0 ",
-    "browserify" : "~13.0.0"
+    "browserify": "~13.0.0"
   },
   "scripts": {
     "clean-deps": "rimraf node_modules"
@@ -51,13 +52,10 @@
   },
   "//": "CUSTOM CONFIGURATION",
   "config": {
-    "//": "Local Server Settings",
+    "//": "Entry files",
     "host": "127.0.0.1",
     "port": "3000",
     "baseUrl": "./",
-    "//": "Gulp Task Directories",
-    "//": "NOTE: folders prefixed with an underscore (_) will have it removed when moved to build target (ex: src/_images -> build/images)",
-    "//": "NOTE: folders NOT prefixed with underscore (_) will be copied to build target 1 to 1 (ex: src/fonts -> build/fonts)",
     "directories": {
       "source": "src",
       "destination": "build",
@@ -70,7 +68,6 @@
       "scripts": "_scripts",
       "data": "_data"
     },
-    "//": "Entry files",
     "entries": {
       "js": "main**.js",
       "css": "main**.{sass,scss}"
